--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ img {
 
 /* Header */
 .hero {
-  background: url(/image_resources/home/showcase.jpg) no-repeat center
+  background: url('../image_resources/home/showcase.jpg') no-repeat center
     center/cover;
   height: 100vh;
   position: relative;
@@ -118,7 +118,7 @@ img {
 }
 
 .hero.blog {
-  background: url("/image_resources/home/blog.jpg") no-repeat center
+  background: url('../image_resources/home/blog.jpg') no-repeat center
     center/cover;
   height: 30vh;
 }
